@@ -84,7 +84,6 @@ How to build & install libvte compatible library using mlterm engine.
     - vte_terminal_get_rewrap_on_resize
     - vte_terminal_set_color_highlight
     - vte_terminal_set_color_highlight_foreground
-    - vte_terminal_set_default_colors
     - vte_terminal_set_background_tint_color
     - vte_terminal_set_cursor_shape
     - vte_terminal_get_font
